--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -206,6 +206,19 @@ html {
   font-style: normal;
 }
 
+@font-face {
+  font-family: Graphik-Medium;
+  src: url("./fonts/Graphik-Medium.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: Graphik-Regular;
+  src: url("./fonts/Graphik-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .home_contanier {
   width: 100%;
   max-width: 1440px;
@@ -226,4 +239,14 @@ html {
   .home_contanier {
     width: 960px;
   }
+}
+
+#app.lang_zh {
+  font-family: "PingFang SC Bold", "PingFang SC", "Microsoft Yahei",
+    Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+#app.lang_en {
+  font-family: "Graphik-Regular", "PingFang SC Bold", "PingFang SC",
+    "Microsoft Yahei", Helvetica Neue, Helvetica, Arial, sans-serif;
 }
