--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -224,20 +224,15 @@ html {
   max-width: 1440px;
   margin: 0 auto;
 }
-
-@media only screen and (max-width: 1440px) {
+/* // @media only screen and (min-width: 960px) and (max-width: 1279px) */
+@media only screen and (min-width: 1280px) and (max-width: 1440px) {
   .home_contanier {
     max-width: 1280px;
   }
 }
-@media only screen and (max-width: 1280px) {
+@media only screen and (min-width: 960px) and (max-width: 1279px) {
   .home_contanier {
     max-width: 960px;
-  }
-}
-@media only screen and (max-width: 960px) {
-  .home_contanier {
-    width: 960px;
   }
 }
 
