--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -206,6 +206,7 @@ html {
   src: url("./fonts/Futura LT Heavy.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-stretch: normal;
 }
 
 @font-face {
@@ -213,12 +214,14 @@ html {
   src: url("./fonts/Graphik-Medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-stretch: normal;
 }
 @font-face {
   font-family: Graphik-Regular;
   src: url("./fonts/Graphik-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-stretch: normal;
 }
 
 .home_contanier {
